--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "sprint12",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js "
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Parapashkin/Sprint-12.git"
   },
   "author": "Pashkin Kirill",
   "license": "ISC",
