--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": "airbnb-base"
+  "extends": "airbnb-base",
+  "rule": {"no-underscore-dangle":  ["error", { "allow": ["_place"] }]}
 }
