--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "mongoose": "^5.10.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "path": "^0.12.7"
+    "mongoose": "^5.10.0",
+    "validator": "^13.1.1",
+    "body-parser": "^1.19.0"
   }
 }
